k3s/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-worker-2
      securityContext:
        fsGroup: 3006
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.11
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: transcode
              mountPath: /transcode
            - name: media-library
              mountPath: /data
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1001
            runAsGroup: 3006
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: transcode
          emptyDir: {}
        - name: media-library
          persistentVolumeClaim:
            claimName: media-library
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
