k3s/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.d-kline.org`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: jellyfin
          port: 8096
  tls: {}
